--- a/app/build.gradle
+++ b/app/build.gradle
@@ -51,10 +51,13 @@ dependencies {
     implementation "com.squareup.retrofit2:converter-gson:$retrofit_ver"
 
     // coroutine dependency
-    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:1.5.2"
+    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:1.6.0"
     implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:2.4.1"
 
     // glide
     implementation 'com.github.bumptech.glide:glide:4.13.0'
     kapt 'com.github.bumptech.glide:compiler:4.13.0'
+
+    // flex box layout dependency
+    implementation 'com.google.android.flexbox:flexbox:3.0.0'
 }
